--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
   "homepage": "https://github.com/Medido1/Blog_API#readme",
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "@quixo3/prisma-session-store": "^3.1.13",
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "express-session": "^1.18.2",
+    "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "prisma": "^6.18.0"
