--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^6.18.0",
     "@quixo3/prisma-session-store": "^3.1.13",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "nodemon": "^3.1.10",
